# webrtcaec3

./: CMakeLists.txt  build_config.h  demo.cc  wavreader.h  wavwriter.c  wavwriter.h
api/: echo_canceller3_config.cc  echo_canceller3_config.h  echo_canceller3_config_json.cc  echo_canceller3_config_json.h  echo_canceller3_factory.cc  echo_canceller3_factory.h
audio_processing/: audio_buffer.cc  audio_buffer.h  audio_frame.cc  audio_frame.h  channel_buffer.cc  channel_buffer.h  channel_layout.cc  high_pass_filter.cc  high_pass_filter.h  sparse_fir_filter.cc  sparse_fir_filter.h  splitting_filter.cc  splitting_filter.h  splitting_filter_c.c  three_band_filter_bank.cc  three_band_filter_bank.h
audio_processing/aec3/: BUILD.gn  adaptive_fir_filter.cc  adaptive_fir_filter.h  adaptive_fir_filter_erl.cc  adaptive_fir_filter_erl.h  adaptive_fir_filter_erl_unittest.cc  adaptive_fir_filter_unittest.cc  aec3_common.cc  aec3_common.h  aec3_fft.cc  aec3_fft.h  aec_state.cc  aec_state.h  aec_state_unittest.cc  alignment_mixer.cc  alignment_mixer.h  alignment_mixer_unittest.cc  api_call_jitter_metrics.cc  block_buffer.cc  block_delay_buffer.cc  block_delay_buffer.h  block_delay_buffer_unittest.cc  block_framer.cc  block_framer.h  block_framer_unittest.cc  block_processor.cc  block_processor.h  block_processor_metrics.cc  block_processor_unittest.cc  clockdrift_detector.cc  comfort_noise_generator.cc  comfort_noise_generator.h  comfort_noise_generator_unittest.cc  decimator.cc  decimator.h  decimator_unittest.cc  dominant_nearend_detector.cc  dominant_nearend_detector.h  downsampled_render_buffer.cc  echo_audibility.cc  (+96 more)
audio_processing/include/: audio_processing.h  audio_util.h
audio_processing/logging/: apm_data_dumper.cc  apm_data_dumper.h  wav_file.cc  wav_file.h  wav_header.cc  wav_header.h
audio_processing/resampler/: push_sinc_resampler.cc  push_sinc_resampler.h  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_neon.cc  sinc_resampler_sse.cc
audio_processing/utility/: BUILD.gn  cascaded_biquad_filter.cc  ooura_fft.cc  (+13 more)
(+276 files in other folders)
